# genesis-workbench

./: .gitignore  CAPABILITY_REGISTRY_DESIGN.md  CHANGELOG.md  CLAUDE.md  Installation.md  LICENSE  MCP_SERVER_APP_PLAN.md  README copy.md  README.md  VORTEX_CONVERTIBLE_FIELDS.md  WORKFLOW_MIGRATION.md  aws.env  azure.env  cleanup.sh  databricks.yml  deploy.py  deploy.sh  destroy.sh  gcp.env
claude_skills/: SKILL_GENESIS_WORKBENCH.md  SKILL_GENESIS_WORKBENCH_BATCH_WORKFLOW_PATTERN.md  SKILL_GENESIS_WORKBENCH_DEPLOY_MONITOR.md  SKILL_GENESIS_WORKBENCH_DEPLOY_WIZARD.md  SKILL_GENESIS_WORKBENCH_DESTROY_WIZARD.md  SKILL_GENESIS_WORKBENCH_DEVELOPMENT.md  SKILL_GENESIS_WORKBENCH_INSTALLATION.md  SKILL_GENESIS_WORKBENCH_PLAYBOOK.md  SKILL_GENESIS_WORKBENCH_RECONSTRUCTION.md  SKILL_GENESIS_WORKBENCH_TROUBLESHOOTING.md  SKILL_GENESIS_WORKBENCH_WORKFLOWS.md
docs/: Module.md  deploy-fe-vm-hls-amer.md  streamlit-to-react-migration-analysis.md
docs/deploy-fe-vm-hls-amer/: alphafold-debug-summary.md  deploy-log.md  redeploy-failed-jobs.md  status-2026-03-13.md
docs/deployments/: .gitignore  README.md  docker-secrets-convention.md
local/: README.md
modules/esmfold/: databricks.yml  deploy.sh  pyproject.toml  requirements.txt  variables.yml
modules/esmfold/notebooks/: 01_register_esmfold.py  esmfold.py  register_esmfold.py
modules/esmfold/resources/: register_esm_fold.job.yml  schema.yml
modules/esmfold/src/esmfold/: __init__.py  esmfold.py
modules/esmfold/tests/esmfold/: test_protein_folding.py
scripts/: heartbeat_app.py  setup_secret_scope.sh  watch_gwb_jobs.py
(+1042 files in other folders)
