[tool.poetry]
name = "ESMfold"
version = "0.1.0"
description = "Protein folding project using ESMfold for genesis workbench for Databricks"
authors = ["Srijit Nair <srijit.nair@databricks.com>", "Eli Swanson <eli.swanson@databricks.com>"]
license = "DB License"
readme = "README.md"
keywords = ["example", "project"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: DB License",
]
packages = [
  { from = "src", include = "esmfold" }
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
